// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coreEngine should remove element with RenderElementMethod 1`] = `
{
  "templateEngine": {
    "@@ENGINE_ROOT_ID": Node {
      "childs": {
        "image_element": true,
        "placeholder_element": true,
      },
      "element": LayoutElement {
        "elements": [
          Element {
            "id": "image_element",
            "interfaceName": "ImageElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "placeholder_element",
            "interfaceName": "PlaceholderElement",
            Symbol(immer-draftable): true,
          },
        ],
        "id": "@@ENGINE_ROOT_ID",
        "interfaceName": "LayoutElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      Symbol(immer-draftable): true,
    },
    "image_element": Node {
      "element": ImageElement {
        "id": "image_element",
        "interfaceName": "ImageElement",
        "src": "https://google.com",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "placeholder_element": Node {
      "element": PlaceholderElement {
        "id": "placeholder_element",
        "interfaceName": "PlaceholderElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
  },
}
`;

exports[`coreEngine should support list replacement with same id 1`] = `
{
  "templateEngine": {
    "@@ENGINE_ROOT_ID": Node {
      "childs": {
        "placeholder_element": true,
        "text_element_1": true,
        "text_element_2": true,
      },
      "element": LayoutElement {
        "elements": [
          Element {
            "id": "text_element_1",
            "interfaceName": "TextElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "text_element_2",
            "interfaceName": "TextElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "placeholder_element",
            "interfaceName": "PlaceholderElement",
            Symbol(immer-draftable): true,
          },
        ],
        "id": "@@ENGINE_ROOT_ID",
        "interfaceName": "LayoutElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      Symbol(immer-draftable): true,
    },
    "placeholder_element": Node {
      "element": PlaceholderElement {
        "id": "placeholder_element",
        "interfaceName": "PlaceholderElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "text_element_1": Node {
      "element": TextElement {
        "id": "text_element_1",
        "interfaceName": "TextElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "text_element_2": Node {
      "element": TextElement {
        "id": "text_element_2",
        "interfaceName": "TextElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
  },
}
`;

exports[`coreEngine should support nested element update with same id 1`] = `
{
  "templateEngine": {
    "@@ENGINE_ROOT_ID": Node {
      "childs": {
        "image_element_1": true,
        "nested_layout_element": true,
      },
      "element": LayoutElement {
        "elements": [
          Element {
            "id": "image_element_1",
            "interfaceName": "ImageElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "nested_layout_element",
            "interfaceName": "LayoutElement",
            Symbol(immer-draftable): true,
          },
        ],
        "id": "@@ENGINE_ROOT_ID",
        "interfaceName": "LayoutElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      Symbol(immer-draftable): true,
    },
    "image_element_1": Node {
      "element": ImageElement {
        "id": "image_element_1",
        "interfaceName": "ImageElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "image_element_2": Node {
      "element": ImageElement {
        "id": "image_element_2",
        "interfaceName": "ImageElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "nested_layout_element",
      Symbol(immer-draftable): true,
    },
    "nested_layout_element": Node {
      "childs": {
        "image_element_2": true,
        "placeholder_element": true,
      },
      "element": LayoutElement {
        "elements": [
          Element {
            "id": "image_element_2",
            "interfaceName": "ImageElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "placeholder_element",
            "interfaceName": "PlaceholderElement",
            Symbol(immer-draftable): true,
          },
        ],
        "id": "nested_layout_element",
        "interfaceName": "LayoutElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "placeholder_element": Node {
      "element": PlaceholderElement {
        "id": "placeholder_element",
        "interfaceName": "PlaceholderElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "nested_layout_element",
      Symbol(immer-draftable): true,
    },
  },
}
`;

exports[`coreEngine should support override element with RenderElementMethod 1`] = `
{
  "templateEngine": {
    "@@ENGINE_ROOT_ID": Node {
      "childs": {
        "image_element": true,
        "placeholder_element": true,
      },
      "element": LayoutElement {
        "elements": [
          Element {
            "id": "image_element",
            "interfaceName": "ImageElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "placeholder_element",
            "interfaceName": "LayoutElement",
            Symbol(immer-draftable): true,
          },
        ],
        "id": "@@ENGINE_ROOT_ID",
        "interfaceName": "LayoutElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      Symbol(immer-draftable): true,
    },
    "button_element": Node {
      "element": ButtonElement {
        "id": "button_element",
        "interfaceName": "ButtonElement",
        "size": "lg",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "placeholder_element",
      Symbol(immer-draftable): true,
    },
    "image_element": Node {
      "element": ImageElement {
        "id": "image_element",
        "interfaceName": "ImageElement",
        "src": "https://google.com",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "placeholder_element": Node {
      "childs": {
        "button_element": true,
        "text_element": true,
      },
      "element": LayoutElement {
        "elements": [
          Element {
            "id": "text_element",
            "interfaceName": "TextElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "button_element",
            "interfaceName": "ButtonElement",
            Symbol(immer-draftable): true,
          },
        ],
        "id": "placeholder_element",
        "interfaceName": "LayoutElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "text_element": Node {
      "element": TextElement {
        "id": "text_element",
        "interfaceName": "TextElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "placeholder_element",
      Symbol(immer-draftable): true,
    },
  },
}
`;

exports[`coreEngine should update the store correctly 1`] = `
{
  "templateEngine": {
    "@@ENGINE_ROOT_ID": Node {
      "childs": {
        "button_element": true,
        "image_element": true,
        "placeholder_element": true,
        "stateholder_element": true,
        "text_element": true,
      },
      "element": LayoutElement {
        "elements": [
          Element {
            "id": "text_element",
            "interfaceName": "TextElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "image_element",
            "interfaceName": "ImageElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "button_element",
            "interfaceName": "ButtonElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "placeholder_element",
            "interfaceName": "PlaceholderElement",
            Symbol(immer-draftable): true,
          },
          Element {
            "id": "stateholder_element",
            "interfaceName": "InputElementState",
            Symbol(immer-draftable): true,
          },
        ],
        "id": "@@ENGINE_ROOT_ID",
        "interfaceName": "LayoutElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      Symbol(immer-draftable): true,
    },
    "button_element": Node {
      "element": ButtonElement {
        "id": "button_element",
        "interfaceName": "ButtonElement",
        "size": "lg",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "image_element": Node {
      "element": ImageElement {
        "id": "image_element",
        "interfaceName": "ImageElement",
        "src": "https://google.com",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "placeholder_element": Node {
      "element": PlaceholderElement {
        "id": "placeholder_element",
        "interfaceName": "PlaceholderElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "stateholder_element": Node {
      "element": InputElementState {
        "id": "stateholder_element",
        "interfaceName": "InputElementState",
        "value": "string_data",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
    "text_element": Node {
      "element": TextElement {
        "id": "text_element",
        "interfaceName": "TextElement",
        Symbol(immer-draftable): true,
      },
      "interfaceName": "Node",
      "parent": "@@ENGINE_ROOT_ID",
      Symbol(immer-draftable): true,
    },
  },
}
`;
